--- a/MediQ-Backend-OCR-Engine-Service/.github/workflows/ci-cd.yml
+++ b/MediQ-Backend-OCR-Engine-Service/.github/workflows/ci-cd.yml
@@ -4,89 +4,218 @@ on:
   push:
     branches: [ main, develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
+  workflow_dispatch:
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: mediq/ocr-engine-service
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+    strategy:
+      matrix:
+        python-version: [3.11]
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
       with:
-        node-version: '18'
-        cache: 'npm'
-    
+        python-version: ${{ matrix.python-version }}
+
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install dependencies
-      run: npm ci
-    
-    - name: Run linter
-      run: npm run lint
-    
-    - name: Run tests
-      run: npm run test:cov
-    
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Create test directories
+      run: |
+        mkdir -p debug_out runs/detect_train/weights
+
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        # Stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # Exit-zero treats all errors as warnings. GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Test with pytest
+      run: |
+        pytest tests/ -v --cov=. --cov-report=html --cov-report=term-missing
+      env:
+        FLASK_ENV: testing
+        PIN_OCR_CONFIG: config.example.yaml
+
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
       with:
-        file: ./coverage/lcov.info
-        flags: ocr-engine-service
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+
+  security:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        scan-type: 'fs'
+        scan-ref: '.'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v2
+      if: always()
+      with:
+        sarif_file: 'trivy-results.sarif'
+
+    - name: Security audit with safety
+      run: |
+        pip install safety
+        safety check --json
 
   build:
-    needs: test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
+    needs: [test, security]
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    
-    - name: Login to Container Registry
-      uses: docker/login-action@v2
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Container Registry
+      uses: docker/login-action@v3
       with:
-        registry: ${{ secrets.CONTAINER_REGISTRY }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
-    
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=sha,prefix=sha-
+          type=raw,value=latest,enable={{is_default_branch}}
+
     - name: Build and push Docker image
-      uses: docker/build-push-action@v4
+      uses: docker/build-push-action@v5
       with:
         context: .
+        platforms: linux/amd64,linux/arm64
         push: true
-        tags: |
-          ${{ secrets.CONTAINER_REGISTRY }}/mediq/ocr-engine-service:latest
-          ${{ secrets.CONTAINER_REGISTRY }}/mediq/ocr-engine-service:${{ github.sha }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
-  deploy:
-    needs: build
+  deploy-staging:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
+    needs: build
+    if: github.ref == 'refs/heads/develop'
+    environment: staging
+
     steps:
-    - uses: actions/checkout@v3
-    
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup kubectl
       uses: azure/setup-kubectl@v3
       with:
         version: 'v1.28.0'
-    
-    - name: Configure kubectl
+
+    - name: Deploy to staging
       run: |
-        echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
+        echo "${{ secrets.KUBE_CONFIG_STAGING }}" | base64 -d > kubeconfig
         export KUBECONFIG=kubeconfig
-    
-    - name: Deploy to Kubernetes
+        
+        # Update image tag
+        kubectl set image deployment/ocr-engine-service \
+          ocr-engine-service=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+          -n mediq-staging
+        
+        # Wait for rollout
+        kubectl rollout status deployment/ocr-engine-service -n mediq-staging --timeout=300s
+        
+        # Verify deployment
+        kubectl get pods -l app=ocr-engine-service -n mediq-staging
+
+  deploy-production:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    environment: production
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup kubectl
+      uses: azure/setup-kubectl@v3
+      with:
+        version: 'v1.28.0'
+
+    - name: Deploy to production
       run: |
+        echo "${{ secrets.KUBE_CONFIG_PRODUCTION }}" | base64 -d > kubeconfig
         export KUBECONFIG=kubeconfig
-        envsubst < k8s/deployment.yaml | kubectl apply -f -
-        kubectl apply -f k8s/service.yaml
-        kubectl apply -f k8s/configmap.yaml
-        kubectl rollout status deployment/ocr-engine-service -n mediq
+        
+        # Update image tag
+        kubectl set image deployment/ocr-engine-service \
+          ocr-engine-service=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+          -n mediq-production
+        
+        # Wait for rollout
+        kubectl rollout status deployment/ocr-engine-service -n mediq-production --timeout=600s
+        
+        # Verify deployment
+        kubectl get pods -l app=ocr-engine-service -n mediq-production
+        
+        # Run health check
+        kubectl exec deployment/ocr-engine-service -n mediq-production -- \
+          curl -f http://localhost:8604/health/health
+
+  notification:
+    runs-on: ubuntu-latest
+    needs: [deploy-staging, deploy-production]
+    if: always()
+
+    steps:
+    - name: Notify deployment status
+      uses: 8398a7/action-slack@v3
+      with:
+        status: ${{ job.status }}
+        channel: '#mediq-deployments'
+        text: |
+          OCR Engine Service deployment completed
+          Branch: ${{ github.ref }}
+          Commit: ${{ github.sha }}
+          Status: ${{ job.status }}
       env:
-        IMAGE_TAG: ${{ github.sha }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+      if: env.SLACK_WEBHOOK_URL != ''
