--- a/MediQ-Backend-OCR-Engine-Service/k8s/configmap.yaml
+++ b/MediQ-Backend-OCR-Engine-Service/k8s/configmap.yaml
@@ -1,61 +1,57 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ocr-engine-service-config
+  name: ocr-engine-config
   labels:
     app: ocr-engine-service
-    component: config
 data:
-  NODE_ENV: "production"
-  PORT: "8604"
-  
   # OCR Engine Configuration
-  OCR_MODEL_PATH: "/app/models"
-  OCR_CONFIDENCE_THRESHOLD: "0.7"
-  OCR_DPI: "300"
+  YOLO_WEIGHTS: "runs/detect_train/weights/best.pt"
+  YOLO_IMGSZ: "640"
+  YOLO_CONF: "0.25"
+  YOLO_USE_TYPE: "true"
+  YOLO_DEVICE: "0"
   
-  # Processing Configuration
-  MAX_CONCURRENT_JOBS: "3"
-  JOB_TIMEOUT: "45000"
-  PROCESSING_QUEUE_SIZE: "20"
+  # OCR Configuration
+  OCR_LANGS: "id,en"
+  OCR_MIN_WIDTH: "1400"
+  OCR_DEBUG_DIR: "debug_out"
+  OCR_TEXT_THRESHOLD: "0.7"
+  OCR_LOW_TEXT: "0.3"
+  OCR_SLOPE_THS: "0.2"
+  OCR_MAG_RATIO: "1.5"
   
-  # Image Preprocessing
-  PREPROCESS_ENABLED: "true"
-  DENOISE_ENABLED: "true"
-  DESKEW_ENABLED: "true"
-  CONTRAST_ENHANCEMENT: "true"
+  # ROI Configuration
+  KTP_LEFT_RATIO: "0.78"
+  NIK_TOP_RATIO: "0.22"
   
-  # KTP Specific Configuration
-  KTP_TEMPLATE_PATH: "/app/templates/ktp"
-  KTP_VALIDATION_ENABLED: "true"
-  KTP_FIELDS_EXTRACTION: "true"
+  # Server Configuration
+  SERVER_HOST: "0.0.0.0"
+  SERVER_PORT: "8604"
+  SERVER_DEBUG: "false"
   
-  # File Handling
-  MAX_FILE_SIZE: "10485760"
-  SUPPORTED_FORMATS: "jpg,jpeg,png,bmp,tiff,pdf"
-  TEMP_DIR: "/tmp/ocr"
+  # Performance Tuning
+  MAX_WORKERS: "4"
+  WORKER_TIMEOUT: "300"
+  MAX_REQUESTS: "1000"
   
-  # Performance Configuration
-  THREAD_POOL_SIZE: "4"
-  MEMORY_LIMIT: "2048"
-  GPU_ENABLED: "false"
-  
-  # Rate Limiting
-  RATE_LIMIT_WINDOW: "900000"
-  RATE_LIMIT_MAX_REQUESTS: "100"
+  # Security
+  MAX_FILE_SIZE: "10MB"
+  ALLOWED_EXTENSIONS: "jpg,jpeg,png,webp"
   
   # Logging
-  LOG_LEVEL: "info"
+  LOG_LEVEL: "INFO"
   LOG_FORMAT: "json"
-  
-  # Health Check
-  HEALTH_CHECK_INTERVAL: "30000"
-  HEALTH_CHECK_TIMEOUT: "10000"
-  
-  # Cache Configuration
-  RESULT_CACHE_ENABLED: "true"
-  RESULT_CACHE_TTL: "600000"
-  
-  # Metrics
-  METRICS_ENABLED: "true"
-  PERFORMANCE_MONITORING: "true"
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: yolo-model-weights
+  labels:
+    app: ocr-engine-service
+    component: ml-model
+binaryData:
+  # YOLO model weights akan di-mount sebagai file
+  # Dalam production, ini akan di-populate dari model registry
+  best.pt: ""
