--- a/MediQ-Backend-OCR-Engine-Service/requirements.txt
+++ b/MediQ-Backend-OCR-Engine-Service/requirements.txt
@@ -1,4 +1,5 @@
 flask>=3.0.0
+flask-restx>=1.3.0
 ultralytics>=8.3.78
 opencv-python
 numpy
@@ -7,3 +8,7 @@ easyocr>=1.7.1
 python-dotenv
 pyyaml
 rapidfuzz>=3.8.0
+pytest>=7.0.0
+pytest-cov>=4.0.0
+pytest-flask>=1.2.0
+pytest-mock>=3.10.0
