feat: complete microservices v3.0 upgrade with enhanced documentation
- Updated all microservice submodules to latest commits
- Enhanced swagger documentation across all services to v3.0
- Added comprehensive README.md updates for all services
- Integrated WebSocket and real-time notification system
- Enhanced OCR Engine Service with Gemini AI implementation
- Added complete API Gateway with 48 endpoints across 13 categories
- Updated all service documentation with latest features

Microservice Updates:
- API Gateway: WebSocket + Notifications + Enhanced CORS
- User Service: Complete KTP fields + Real-time notifications
- OCR Service: Gemini AI integration + Queue management
- Queue Service: Real-time updates + WebSocket integration
- Institution Service: Enhanced search + Real-time features
- OCR Engine: Gemini AI replacement with backward compatibility

All services now include:
🚀 Enhanced performance and reliability
📚 Complete swagger documentation v3.0
🔔 Real-time notification capabilities
🔗 WebSocket integration for live updates
🤖 Gemini AI integration for improved accuracy

--- a/MediQ-Backend-OCR-Engine-Service/.env.example
+++ b/MediQ-Backend-OCR-Engine-Service/.env.example
@@ -1,49 +1,24 @@
-# MediQ OCR Engine Service Environment Configuration
-
-# Server Configuration
+# MediQ OCR Engine Service - Gemini Powered
+GOOGLE_API_KEY=your_google_api_key_here
 PORT=8604
-FLASK_ENV=development
-PYTHONUNBUFFERED=1
+FLASK_ENV=production
+FLASK_DEBUG=false
 
-# Configuration File
-PIN_OCR_CONFIG=config.yaml
+# Gemini Configuration
+GEMINI_MODEL=gemini-2.0-flash-exp
+GEMINI_TEMPERATURE=0.1
+GEMINI_TOP_P=0.8
+GEMINI_MAX_TOKENS=1024
 
-# GPU Configuration (set to cpu if no GPU available)
-CUDA_VISIBLE_DEVICES=0
-
-# YOLO Configuration
-YOLO_WEIGHTS=runs/detect_train/weights/best.pt
-YOLO_IMGSZ=640
-YOLO_CONF=0.25
-YOLO_USE_TYPE=true
-YOLO_DEVICE=0
-
-# OCR Configuration
-OCR_LANGS=id,en
-OCR_MIN_WIDTH=1400
-OCR_DEBUG_DIR=debug_out
-OCR_TEXT_THRESHOLD=0.7
-OCR_LOW_TEXT=0.3
-OCR_SLOPE_THS=0.2
-OCR_MAG_RATIO=1.5
-
-# ROI Configuration
-KTP_LEFT_RATIO=0.78
-NIK_TOP_RATIO=0.22
-
-# Performance Tuning
-MAX_WORKERS=4
-WORKER_TIMEOUT=300
-MAX_REQUESTS=1000
-
-# Security
+# Image Processing
 MAX_FILE_SIZE=10MB
 ALLOWED_EXTENSIONS=jpg,jpeg,png,webp
+IMAGE_MAX_SIZE=1024
+
+# Performance
+MAX_WORKERS=4
+WORKER_TIMEOUT=120
+REQUEST_TIMEOUT=60
 
 # Logging
 LOG_LEVEL=INFO
-LOG_FORMAT=json
-
-# Debug
-DEBUG_MODE=false
-SAVE_DEBUG_IMAGES=false
