--- a/MediQ-Backend-OCR-Engine-Service/.env
+++ b/MediQ-Backend-OCR-Engine-Service/.env
@@ -1,7 +1,4 @@
+GOOGLE_API_KEY=AIzaSyDeJf8yNpIq7v0HPzmuibzbuawGAb8Y8HA
 PORT=8604
 FLASK_ENV=production
 FLASK_DEBUG=false
-YOLO_MODEL_PATH="./runs/detect/train/weights/best.pt"
-MAX_IMAGE_SIZE=2048
-CONFIDENCE_THRESHOLD=0.5
-USE_GPU=false
